# AlphaGo

./: .gitignore  AlphaGoPlayer.py  AlphaGoTree.py  Board.py  Constants.py  GoFast.py  Goban.py  MCTS.py  MctsPlayer.py  MctsTree.py  MyPlayer.py  README.md  main.py  namedGame.py  playerInterface.py  pyproject.toml  randomPlayer.py
go_game/: Cargo.toml
go_game/src/: game.rs
mcts_players/: MctsTree.py  __init__.py
mcts_players/network/: DataTools.py  Network.py  NetworkPlayer.py  NetworkTree.py  TrainModel.py
mcts_players/network/checkpoints/: checkpoint_1_2000.pt  checkpoint_1_4000.pt  checkpoint_1_6000.pt
mcts_players/rollouts/: RolloutPlayer.py  RolloutTree.py
players/: __init__.py
players/mcts_rl/: MctsRlNn.py  MctsRlPlayer.py  MctsRlTree.py  TrainModel.py  __init__.py
players/mcts_rollout/: MctsRolloutPlayer.py  MctsTree.py  __init__.py
